# Mini-Agents

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: plan_solve_agent.py  test_plan_solve_agent.py
mini_agents/: __init__.py
mini_agents/agents/: __init__.py  plan_solve_agent.py  reflection_agent.py
mini_agents/core/: __init__.py  agent.py  config.py  exceptions.py  llm.py  message.py
mini_agents/tools/: __init__.py  base.py  registry.py
mini_agents/tools/builtin/: __init__.py  file_tool.py  search_tool.py
tests/: test_reflection_agent.py  test_search_tool.py  test_tool_register.py
