[project]
name = "mini-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_agents*"]
exclude = ["examples*"]

[project.optional-dependencies]
# 搜索功能依赖
search = [
    "tavily-python>=0.7.12",
    "google-search-results>=2.4.2",
]
